--- a/.github/workflows/ci-basic.yml
+++ b/.github/workflows/ci-basic.yml
@@ -35,19 +35,19 @@ jobs:
       - name: 🔧 Install dependencies
         run: |
           python -m pip install --upgrade pip
-          cd Workflow-CI/MLProject
+          cd MLProject
           pip install -r requirements.txt
 
       - name: 📊 Verify data files
         run: |
-          cd Workflow-CI/MLProject
+          cd MLProject
           echo "Checking for required data files..."
           ls -la dataset_preprocessing/
           python -c "import pandas as pd; print('✅ All data files accessible')"
 
       - name: 🤖 Run MLflow Project - Basic
         run: |
-          cd Workflow-CI/MLProject
+          cd MLProject
           echo "Starting basic ML training..."
           python modelling.py
 
@@ -58,7 +58,7 @@ jobs:
 
       - name: 🏗️ Test model loading (verification)
         run: |
-          cd Workflow-CI/MLProject
+          cd MLProject
           python -c "
           import mlflow
           import os
