--- a/MLProject/requirements.txt
+++ b/MLProject/requirements.txt
@@ -1,9 +1,34 @@
-mlflow==2.19.0
-scikit-learn==1.3.2
+# Core ML libraries
+scikit-learn==1.4.0
 pandas==2.1.4
-numpy==1.26.4
+numpy==1.26.2
 matplotlib==3.8.2
-seaborn==0.13.0
-joblib==1.3.2
-pytest==7.4.3
+seaborn==0.12.2
+
+# MLflow for experiment tracking
+mlflow==2.9.2
+
+# Flask for API serving
 flask==3.0.0
+flask-cors==4.0.0
+
+# Testing and quality
+pytest==7.4.4
+pytest-cov==4.0.0
+pytest-html==4.1.1
+flake8==7.0.0
+bandit==1.7.5
+safety==2.3.5
+
+# Deployment and containerization
+gunicorn==21.2.0
+docker==7.0.0
+
+# Utility libraries
+joblib==1.3.2
+pyyaml==6.0.1
+requests==2.31.0
+python-dotenv==1.0.0
+
+# Data processing
+scipy==1.11.4
