--- a/MLProject/requirements.txt
+++ b/MLProject/requirements.txt
@@ -1,5 +1,5 @@
 # Core ML libraries
-scikit-learn==1.4.0
+scikit-learn==1.3.2
 pandas==2.1.4
 numpy==1.26.2
 matplotlib==3.8.2
@@ -9,7 +9,7 @@ seaborn==0.12.2
 mlflow==2.9.2
 
 # Flask for API serving
-flask==3.0.0
+flask==2.3.3
 flask-cors==4.0.0
 
 # Testing and quality
@@ -22,7 +22,7 @@ safety==2.3.5
 
 # Deployment and containerization
 gunicorn==21.2.0
-docker==6.1.3  # ✅ now compatible with mlflow 2.9.2
+docker==6.1.3
 
 # Utility libraries
 joblib==1.3.2
