Add advanced CI workflow

--- a/MLProject/Dockerfile
+++ b/MLProject/Dockerfile
@@ -1,39 +1,25 @@
-# Use Python 3.12 slim image for efficiency
+# MLProject/Dockerfile
 FROM python:3.12.7-slim
 
-# Set working directory
 WORKDIR /app
 
-# Set environment variables
-ENV PYTHONUNBUFFERED=1
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV MLFLOW_TRACKING_URI=sqlite:///mlflow.db
-
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    gcc \
-    g++ \
-    && rm -rf /var/lib/apt/lists/*
-
-# Copy requirements first for better caching
-COPY requirements.txt .
+# Copy requirements and install dependencies
+COPY conda.yaml .
+COPY modelling.py .
+COPY dataset_preprocessing/ ./dataset_preprocessing/
 
 # Install Python dependencies
-RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir mlflow==2.19.0 scikit-learn pandas numpy matplotlib seaborn
 
-# Copy project files
-COPY . .
+# Set environment variables for MLflow
+ENV MLFLOW_TRACKING_URI=file:///app/mlruns
+ENV PYTHONPATH=/app
 
 # Create necessary directories
-RUN mkdir -p mlruns models logs
+RUN mkdir -p /app/mlruns
 
-# Set permissions
-RUN chmod +x modelling_advanced.py
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD python -c "import mlflow; print('MLflow OK')" || exit 1
+# Expose MLflow port
+EXPOSE 5000
 
 # Default command
-CMD ["python", "modelling_advanced.py"]
+CMD ["python", "modelling.py"]
